code refactoring for java 17